--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -22,9 +23,9 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout android:layout_width="match_parent"
-                 android:layout_height="match_parent"
+                 android:layout_height="600dp"
                  android:id="@+id/frameLayout">
-    </FrameLayout>
+            </FrameLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
