--- a/app/src/main/res/layout/friendlist_fragment.xml
+++ b/app/src/main/res/layout/friendlist_fragment.xml
@@ -11,8 +11,7 @@
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/myfriend"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
+    android:layout_height="600dp"
     ></androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -26,9 +25,9 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/myfriend"
-            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.975"
-            app:layout_constraintVertical_bias="0.985"/>
+            android:layout_marginEnd="5dp" app:layout_constraintEnd_toEndOf="@+id/myfriend"
+            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="1.000"
+            app:layout_constraintVertical_bias="0.920"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
